syntax = "proto3";

package pet;
  
option go_package = "./pet";

message IdRequest {
    string id = 1;
}
  
message PetResponse {
    string id = 1;
    string name = 2;
}
  
service Pet {
    rpc GetPet(IdRequest) returns(PetResponse);
}